# scalers-slack

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS_SUMMARY.md  CONTRIBUTING.md  IMPROVEMENT_RECOMMENDATIONS.md  Makefile  PROJECT_RULES.md  README.md  REORGANIZATION_PLAN.md  REORGANIZATION_SUMMARY.md  config.json  migrate_to_supabase.py  pyproject.toml  requirements-dev.txt  supabase_credentials_helper.py  tasks_2026_01_28.txt
config/: config.json  daily_report_defaults.json  project_memory.json  team_channels.json
docs/: ARCHITECTURE.md  LLM_INTEGRATION.md  PLUGIN_SYSTEM.md  browser_automation.md
output/: daily_task_report.csv  daily_task_report.html  daily_task_report.json  daily_task_report.md  daily_task_report_2026-01-29.csv  daily_task_report_2026-01-29_actions.csv  notion_text_dump.txt
plugins/: __init__.py  example_email_notifier.py  example_priority_processor.py  example_slack_formatter.py
scripts/: README.md  ask.py  auto_improve.sh  browser_health_check.py  browser_no_api_smoke.py  check_my_tasks.py  check_slack_history.py  check_slack_tasks.py  create_storage_state.py  daily_report_pure_browser.py  daily_report_v2.py  daily_task_report.py  dm_daily_digest.py  enhanced_daily_task_report.py  init_task_memory.py  migrate_to_supabase.py  monitor_projects.py  security_scan.py  session_manager.py  smoke_metrics_report.py  test_integration.py  validate_config.py
src/: __init__.py  audit_logger.py  browser_automation.py  cache_manager.py  channel_manager.py  command_engine.py  config_loader.py  config_manager.py  config_validation.py  daily_aggregator.py  dom_selectors.py  engine.py  enhanced_browser_automation.py  error_handler.py  error_reporter.py  health_check.py  historical_comparison.py  llm_client.py  logging_utils.py  models.py  summarizer.py  (+14 more)
(+45 files in other folders)
