[project]
name = "scalers-slack"
version = "0.1.0"
description = "Slack + Notion automation for Scalers"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "jsonschema>=4.22.0",
]

[project.scripts]
scalers-digest = "scripts.dm_daily_digest:main"
scalers-health = "scripts.browser_health_check:main"
scalers-migrate = "scripts.migrate_to_supabase:main"
scalers-setup = "scripts.create_storage_state:main"
scalers-validate = "scripts.validate_config:main"
scalers-security = "scripts.security_scan:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "requests-mock>=1.12.1",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "types-requests>=2.32.0.20240712",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
